Created new stlesheets and made changes to padding keywords

--- a/css/colors.css
+++ b/css/colors.css
@@ -9,3 +9,12 @@
     --black-50: #121212;
     --black-100: #000;
 }
+.red-bg{
+
+}
+.bg-dodgerblue{
+    background: dodgerblue;
+}
+.bg{
+    background: var();
+}
