--- a/css/inputs.css
+++ b/css/inputs.css
@@ -19,7 +19,6 @@ textarea{
     outline: none !important;
     display: block;
     padding: 10px;
-    margin: 5px;
 }
 input[type=date]:focus,
 input[type=datetime]:focus,
@@ -49,12 +48,20 @@ button{
     border: 1px solid #eee;
     background-color: #eee;
     cursor: pointer;
+    border-radius: 5px;
+    opacity: 1;
 }
 input[type=color]{
     outline: none !important;
     border: 1px solid #eee;
     background-color: #eee;
     cursor: pointer;
+}
+input[type=button]:hover, input[type=button]:focus,
+input[type=submit]:hover, input[type=submit]:focus,
+input[type=reset]:hover, input[type=reset]:focus,
+button:hover, button:focus{
+    opacity: 0.7;
 }
 .no-resize{
     resize: none;
@@ -68,3 +75,4 @@ input[type=color]{
 .resize-xy{
     resize: both;
 }
+ 
