--- a/css/widgets.css
+++ b/css/widgets.css
@@ -1,5 +1,7 @@
 .floating-button{
-    
+    position: fixed;
+    padding: 10px;
+    box-shadow: 0px 0px 3px 0.15px;
 }
 .nav{
     display: block;
@@ -10,6 +12,10 @@
 }
 .floating-nav{
     box-shadow: 0px 0px 3px 0.15px;
+}
+.nav-items{
+    text-decoration: none;
+    font-size: small;
 }
 .notification{
     padding: 25px;
