--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-nav{
-    padding: 10px;
-}
 .relative-nav{
     position: fixed;
     top: 0;
@@ -160,4 +157,13 @@ fixed-nav-top{
 }
 .justify-content-end{
     justify-content: end;
+}
+.hide{
+    display: none;
+}
+.show-block{
+    display: block;
+}
+.show-flex{
+    display: flex;
 }
