--- a/css/layout.css
+++ b/css/layout.css
@@ -117,14 +117,62 @@
 .no-width, .width-0{
     width: 0%;
 }
+.width-1{
+    width: 1%;
+}
+.width-2{
+    width: 2%;
+}
+.width-3{
+    width: 3%;
+}
+.width-4{
+    width: 4%;
+}
 .width-5{
     width: 5%;
+}
+.width-6{
+    width: 6%;
+}
+.width-7{
+    width: 7%;
+}
+.width-8{
+    width: 8%;
+}
+.width-9{
+    width: 9%;
 }
 .width-10{
     width: 10%;
 }
+.width-11{
+    width: 11%;
+}
+.width-12{
+    width: 12%;
+}
+.width-13{
+    width: 13%;
+}
+.width-14{
+    width: 14%;
+}
 .width-15{
     width: 15%;
+}
+.width-16{
+    width: 16%;
+}
+.width-17{
+    width: 17%;
+}
+.width-18{
+    width: 18%;
+}
+.width-19{
+    width: 19%;
 }
 .width-20{
     width: 20%;
@@ -200,7 +248,7 @@
 }
 
 /* heights */
-
+.HEIGHT==
 .height-5{
     height: 5%;
 }
