--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,23 @@ html{
 body{
     margin: 0;
 }
+.rippleEffect{
+    position: absolute;
+    background-color: #ffffffb3;
+    /* background-color: red; */
+    border-radius: 50%;
+    transform: scale(0);
+    opacity: 0.6;
+    overflow: hidden;
+    animation: ripple 0.4s linear;
+}
+
+@keyframes ripple {
+    to{
+        transform: scale(2.5);
+        opacity: 0;
+    }
+}
 :root{
     
 }
