--- a/css/widgets.css
+++ b/css/widgets.css
@@ -81,19 +81,19 @@
 .floating-modal{
     box-shadow: 0px 0px 3px 2px #eee;
 }
-.modal-25pc{
+.modal-25{
     width: 25%;
     margin-left:calc(-25% /2);
 }
-.modal-50pc{
+.modal-50{
     width: 50%;
     margin-left:calc(-50% /2);
 }
-.modal-75pc{
+.modal-75{
     width: 75%;
     margin-left:calc(-75% /2);
 }
-.modal-100pc{
+.modal-100{
     width: 100%;
     margin-left:calc(-100% /2);
 }
