--- a/css/inputs.css
+++ b/css/inputs.css
@@ -61,7 +61,7 @@ input[type=button]:hover, input[type=button]:focus,
 input[type=submit]:hover, input[type=submit]:focus,
 input[type=reset]:hover, input[type=reset]:focus,
 button:hover, button:focus{
-    opacity: 0.7;
+    /* opacity: 0.7; */
 }
 .no-resize{
     resize: none;
