--- a/css/layers.css
+++ b/css/layers.css
@@ -1,3 +1,21 @@
+.layer--5{
+    z-index: -5;
+}
+.layer--4{
+    z-index: -4;
+}
+.layer--3{
+    z-index: -3;
+}
+.layer--2{
+    z-index: -2;
+}
+.layer--1{
+    z-index: -1;
+}
+.layer-0, .layer--0{
+    z-index: 0;
+}
 .layer-1{
     z-index: 1;
 }
